--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="fab"></div>
       <div class="fab"></div>
     </div>
+    <audio src=""></audio>
     <script src="memory.js"></script>
   </body>
 </html>
