Fix display issue

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     Memory Game
   </header>
   <body>
+
     <div class="container">
       <div class="fab"></div>
       <div class="fab"></div>
@@ -36,7 +37,9 @@
       <div class="fab"></div>
       <div class="fab"></div>
     </div>
-    <audio src=""></audio>
+    <audio src="sounds/soundx.wav"></audio>
+    <audio src="sounds/cling_2.wav"></audio>
+    <audio src="sounds/soundW.wav"></audio>
     <script src="memory.js"></script>
   </body>
 </html>
