Add restart functionality and also number of tries to fully match every panel

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 </head>
   <header>
-    Memory Game
+    <p>Memory Game</p>
   </header>
   <body>
-
+    <p>Clicks: <span class="clicks"></span> <span class="bscore"></span></p>
     <div class="container">
       <div class="fab"></div>
       <div class="fab"></div>
