Create timer function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
   <body>
     <p>Clicks: <span class="clicks"></span> <span class="bscore"></span></p>
+    <div class="time">Timer: <span class="mins"></span> <span class="secs"></span></div>
     <div class="container">
       <div class="fab"></div>
       <div class="fab"></div>
