--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
   <header>
     <p>Memory Game</p>
   </header>
+  <div class="hide">
+    <p>Try to beat the Best Time with less clicks.</p>
+  </div>
   <body>
-    <p>Clicks: <span class="clicks"></span> <span class="bscore"></span></p>
-    <div class="time">Timer: <span class="mins"></span> <span class="secs"></span></div>
+    <div class="game"> 
+      <p>Clicks: <span class="clicks"></span> / <span class="bscore"></span></p>
+      <p class="btime">Best Time: <span class="mins">0</span> : <span class="secs">0</span></p>
+      <div class="time"><span>Timer: </span><span class="mins">0</span> : <span class="secs">0</span></div>
+    </div>
     <div class="container">
       <div class="fab"></div>
       <div class="fab"></div>
